[profile.release]
lto = true

[workspace]
members = ["crates/*"] # , "examples/*", "tests/*"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daan Adams @DaanA32"]
homepage = "https://github.com/DaanA32/dfx"
repository = "https://github.com/DaanA32/dfx"
description = ""
publish = false
readme = "README.md"
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MPL-2.0"
