[profile.release]
lto = true

[workspace]
members = ["crates/*", "examples/*"] # , "tests/*"

[workspace.package]
version = "1.0.0-alpha"
edition = "2021"
authors = ["Daan Adams @DaanA32"]
homepage = "https://github.com/DaanA32/dfx"
repository = "https://github.com/DaanA32/dfx"
description = "A FIX protocol implementation"
publish = false
readme = "README.md"
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MPL-2.0"

[patch.crates-io]
openssl = { git = 'https://github.com/sfackler/rust-openssl' }
openssl-sys = { git = 'https://github.com/sfackler/rust-openssl' }
