[package]
name = "dfx-base"
version = "1.0.0-beta"
edition = "2021"
authors = ["Daan Adams @DaanA32"]
homepage = "https://github.com/DaanA32/dfx"
repository = "https://github.com/DaanA32/dfx"
description = "A FIX protocol implementation"
publish = true
readme = "README.md"
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["parser-implementations", "encoding"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
xmltree = "0.10.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

[[bench]]
name = "data_dictionary"
harness = false
