[package]
name = "dfx-spec"
version = "1.0.0-alpha"
edition = "2021"
authors = ["Daan Adams @DaanA32"]
homepage = "https://github.com/DaanA32/dfx"
repository = "https://github.com/DaanA32/dfx"
description = "A FIX protocol implementation"
publish = false
readme = "README.md"
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["parser-implementations", "encoding"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dfx = { version = "0.1.0", path = "../dfx" }
dfx-base = { version = "1.0.0-alpha", path = "../dfx-base" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0" # TODO replace this with quick-xml
quick-xml = "0.26.0"
regex = "1.6.0"
lazy_static = "1.4.0"
chrono = "0.4.23"
chrono-tz = "0.8.0"
chashmap = "2.2.2"
derive_builder = "0.11.2"

[build-dependencies]
indoc = "1"
heck = "0.4.0"
# dfx = { version = "1.0.0-alpha", path = "../dfx" }
dfx-base = { version = "1.0.0-alpha", path = "../dfx-base" }
