[package]
name = "dfx-spec"
version = "1.0.0-beta"
edition = "2021"
authors = ["Daan Adams @DaanA32"]
homepage = "https://github.com/DaanA32/dfx"
repository = "https://github.com/DaanA32/dfx"
description = "A FIX protocol implementation"
publish = false
readme = "README.md"
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["parser-implementations", "encoding"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dfx = { version = "0.1.0", path = "../dfx" }
dfx-base = { version = "1.0.0-beta", path = "../dfx-base" }

[build-dependencies]
indoc = "1"
heck = "0.4.0"
# dfx = { version = "1.0.0-beta", path = "../dfx" }
dfx-base = { version = "1.0.0-beta", path = "../dfx-base" }
