[package]
name = "dfx-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dfx = { version = "0.1.0", path = "../dfx" }
dfx-core = { path = "../dfx-core" }
paste = "1.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
regex = "1.6.0"
