[package]
name = "dfx-testing"
version = "1.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dfx = { version = "0.1.0", path = "../dfx" }
dfx-base = { path = "../dfx-base" }
paste = "1.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
regex = "1.6.0"
encoding_rs = "0.8.32"
